--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./core/assets/rp_light.png" rel="icon" media="(prefers-color-scheme: light)">
     <link href="./core/assets/rp_dark.png" rel="icon" media="(prefers-color-scheme: dark)">
-    <title>RelievePast</title>
+    <title>RelivePast</title>
   </head>
   <body>
     <script type="module" src="/src/index.js"></script>
